# polligram

./: .gitignore  pyproject.toml
actions/: booking_com.py  cinematheque_leipzig.py  groupon.py  plagwitzer_markthalle.py  the_niu.py
polligram/: __init__.py  __main__.py  conf.py  db.py  msg.py  tg.py
polligram/action/: __init__.py  html.py
polligram/job/: __init__.py  html.py
